Round 4: Pagination for 20+ endpoints across 8 services (IAM Role, Customer Tag, SIP, PBX, Campaign, Chat, Email)